gcc/testsuite/rust/rustc/ui/union/union-empty.rs
union U {} // { dg-error "" "" { target *-*-* } }

fn main() {}

